<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Subscriptly</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_feeds">Feeds</string>
    <string name="title_friends">Friends</string>
    <string name="title_subscriptions">Subscriptions</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_layout_activityy">LayoutActivity</string>
    <string name="title_activity_bottom_navigation_test">BottomNavigationTest</string>

    <!-- Add Subscription Activity -->
    <string name="title_add_subscription">Add Subscription</string>
    <string name="subscription_name_label">Subscription Name</string>
    <string name="subscription_name_placeholder">ex. Netflix</string>
    <string name="subscription_bill_label">Monthly Subscription Bill</string>
    <string name="price_example_placeholder">ex. 100000</string>
    <string name="add_member_label">Add Member</string>
    <string name="time_range_label">Time Range</string>
    <string name="time_range_placeholder">in month (ex. 12)</string>
    <string name="subscription_start_placeholder">Start Subscription Date</string>

    <!-- Change Password Activity -->
    <string name="title_change_password_activity">Change Password</string>
    <string name="current_password_label">Current Password</string>
    <string name="new_password_label">New Password</string>
    <string name="confirm_new_password_label">Confirm New Password</string>

    <!-- Choose Friend Activity -->
    <string name="title_choose_friend_activity">Choose Friend</string>
    <string name="done_button">Done</string>

    <!-- Edit Profile Activity -->
    <string name="title_edit_profile_activity">Edit Profile</string>
    <string name="save_changes_button">Save Changes</string>

    <!-- User Form -->
    <string name="name_label">Name</string>
    <string name="username_label">Username</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="name_placeholder">ex. Elon Musk</string>
    <string name="username_placeholder">ex. elonmusk</string>
    <string name="email_placeholder">must be unique</string>
    <string name="password_placeholder">minimum 8 to 30 characters</string>

    <!-- Main Activity / Sign In -->
    <string name="title_main_activity">Sign In</string>
    <string name="welcome_back_string">Welcome Back!👋</string>
    <string name="welcome_back_substring">We are so happy to see you. Continue to login to manage your subscriptions.</string>
    <string name="sign_in_button">Sign In</string>
    <string name="dont_have_account">Don\'t have an account?</string>

    <!-- Sign Up Activity -->
    <string name="title_sign_up_activity">Sign Up</string>
    <string name="sign_up_string">Create a New Account</string>
    <string name="sign_up_substring">Create an account so you can manage your subscriptions</string>
    <string name="already_have_account">Already have an account?</string>

    <!-- Profile Activity -->
    <string name="setting_language">Language Setting</string>
    <string name="app_name">Subscriptly</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_friend">AddFriendActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_feeds">Feeds</string>
    <string name="title_friends">Friends</string>
    <string name="title_subscriptions">Subscriptions</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_test">Test</string>
    <string name="title_activity_layout_activityy">LayoutActivity</string>
    <string name="title_activity_bottom_navigation_test">BottomNavigationTest</string>
    <string name="title_add_subscription">Add Subscription</string>
    <string name="subscription_name_label">Subscription Name</string>
    <string name="subscription_name_placeholder">ex. Netflix</string>
    <string name="subscription_bill_label">Monthly Subscription Bill</string>
    <string name="price_example_placeholder">ex. 100000</string>
    <string name="add_member_label">Add Member</string>
    <string name="time_range_label">Time Range</string>
    <string name="time_range_placeholder">in month (ex. 12)</string>
    <string name="subscription_start_placeholder">Start Subscription Date</string>
    <string name="title_change_password_activity">Change Password</string>
    <string name="current_password_label">Current Password</string>
    <string name="new_password_label">New Password</string>
    <string name="confirm_new_password_label">Confirm New Password</string>
    <string name="title_choose_friend_activity">Choose Friend</string>
    <string name="done_button">Done</string>
    <string name="title_edit_profile_activity">Edit Profile</string>
    <string name="save_changes_button">Save Changes</string>
    <string name="name_label">Name</string>
    <string name="username_label">Username</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="confirm_password_label">Confirm Password</string>
    <string name="name_placeholder">ex. Elon Musk</string>
    <string name="username_placeholder">ex. elonmusk</string>
    <string name="email_placeholder">must be unique</string>
    <string name="password_placeholder">minimum 8 to 30 characters</string>
    <string name="title_main_activity">Sign In</string>
    <string name="welcome_back_string">Welcome Back!👋</string>
    <string name="welcome_back_substring">We are so happy to see you. Continue to login to manage your subscriptions.</string>
    <string name="sign_in_button">Sign In</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="title_sign_up_activity">Sign Up</string>
    <string name="sign_up_string">Create a New Account</string>
    <string name="sign_up_substring">Create an account so you can manage your subscriptions</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="title_profile_activity">My Profile</string>
    <string name="title_search_activity">Search Friend</string>
    <string name="no_friends_message">No friends yet</string>
</resources>