<?xml version="1.0" encoding="utf-8"?>
<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:flexDirection="column"
    android:layout_marginHorizontal="30dp"
    app:justifyContent="center"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back_string"
        android:fontFamily="@font/outfit"
        android:textColor="@color/primary_color"
        android:textSize="24dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="349dp"
        android:layout_height="40dp"
        android:fontFamily="@font/outfit"
        android:layout_marginVertical="10dp"
        android:text="@string/welcome_back_substring" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:src="@drawable/hello"
        android:scaleType="fitCenter"/>

    <EditText
        android:id="@+id/field_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:fontFamily="@font/outfit"
        android:layout_marginVertical="5dp"
        android:textSize="15dp"
        android:hint="@string/email_label"/>

    <EditText
        android:id="@+id/field_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/border"
        android:fontFamily="@font/outfit"
        android:layout_marginVertical="5dp"
        android:textSize="15dp"
        android:hint="@string/password_label"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/action_sign_in"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:backgroundTint="@color/primary_color"
        android:fontFamily="@font/outfit_light"
        android:gravity ="center"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.Button"
        app:cornerRadius="15dp"
        android:textColor="@color/white"
        android:layout_marginVertical="5dp"
        android:text="@string/sign_in_button">

    </com.google.android.material.button.MaterialButton>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18dp"
        android:fontFamily="@font/outfit_medium"
        android:layout_marginBottom="7dp"
        android:text="@string/or"/>

    <Button
        android:id="@+id/google_sign_in"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/border_black"
        android:fontFamily="@font/outfit_light"
        android:gravity ="center"
        app:cornerRadius="15dp"
        android:textColor="@color/black"
        android:layout_marginVertical="5dp"
        android:text="@string/sign_in_with_google"
        android:drawableLeft="@drawable/common_google_signin_btn_icon_dark">
    </Button>

    <com.google.android.flexbox.FlexboxLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/outfit"
            android:text="@string/dont_have_account"/>

        <TextView
            android:id="@+id/redirect_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/outfit_bold"
            android:textColor="@color/primary_color"
            android:text="@string/title_sign_up_activity"/>
    </com.google.android.flexbox.FlexboxLayout>


</com.google.android.flexbox.FlexboxLayout>