<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditProfileActivity">

    <com.google.android.material.appbar.AppBarLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="15dp"
        tools:context=".fragments.TopNavBarFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:navigationIcon="?attr/homeAsUpIndicator"
            app:titleTextColor="@color/primary_color"
            app:title="@string/title_edit_profile_activity"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="10dp"
            app:alignItems="center"
            app:justifyContent="center">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_picture_card"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:cardCornerRadius="100dp">

                <ImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/iu_profile" />
            </androidx.cardview.widget.CardView>
        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:flexDirection="column">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_medium"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="@string/name_label"/>

            <EditText
                android:id="@+id/profile_name_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Kesya Amanda"/>
        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:flexDirection="column">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_medium"
                android:text="@string/username_label"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/profile_uname_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="kesimanda"/>
        </com.google.android.flexbox.FlexboxLayout>

        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:flexDirection="column">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_medium"
                android:textColor="@color/black"
                android:text="@string/email_label"/>

            <EditText
                android:id="@+id/profile_email_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#535353"
                android:hint="kesya.aw@gmail.com"/>
        </com.google.android.flexbox.FlexboxLayout>

        <Button
            android:id="@+id/action_save_changes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="15dp"
            android:background="#004AAD"
            android:textColor="@color/white"
            android:text="@string/save_changes_button"/>

    </LinearLayout>

</LinearLayout>